[project]
name = "find-a-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.1",
    "reactable>=0.1.5",
    "shiny>=1.4.0",
    "shinywidgets>=0.7.0",
]
