[project]
name = "find-a-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatlas[google]>=0.9.2",
    "dotenv>=0.9.9",
    "google-genai>=1.30.0",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "reactable>=0.1.5",
    "rsconnect-python>=1.27.1",
    "setuptools>=80.9.0",
    "shiny[theme]>=1.4.0",
    "shinywidgets>=0.7.0",
]
